[gd_scene load_steps=4 format=3 uid="uid://settingsdialog"]

[ext_resource type="Script" path="res://scripts/SettingsDialog.gd" id="1"]
[ext_resource type="Texture2D" path="res://textures/legacy/icons/volume.png" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.06, 0.06, 0.06, 1)

[node name="SettingsDialog" type="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MusicHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicHBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Music"
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicHBox"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 70.0
step = 1.0

[node name="VolumeLabel" type="Label" parent="VBoxContainer/MusicHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "70%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicToggle" type="TextureButton" parent="VBoxContainer/MusicHBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2")
ignore_texture_size = true
stretch_mode = 5

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SfxHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="VBoxContainer/SfxHBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "SFX"
vertical_alignment = 1

[node name="SfxSlider" type="HSlider" parent="VBoxContainer/SfxHBox"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 80.0
step = 1.0

[node name="VolumeLabel" type="Label" parent="VBoxContainer/SfxHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxToggle" type="TextureButton" parent="VBoxContainer/SfxHBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2")
ignore_texture_size = true
stretch_mode = 5

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Close"

